Options: add-opens. Logback fix.