@@ -42,6 +42,7 @@ dependencies {
 
 application {
     mainClassName = "com.github.raymank26.csvsh.AppKt"
+    applicationDefaultJvmArgs = listOf("--add-opens=java.base/java.nio=ALL-UNNAMED", "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED")
 }
 
 tasks.generateGrammarSource {
